syntax = "proto3";

service Glossary {

  rpc About (EmptyRequest) returns (Reply) {}

  rpc Author (EmptyRequest) returns (Reply) {}

  rpc All (EmptyRequest) returns (AllReply) {}

  rpc List (EmptyRequest) returns (ListReply) {}

  rpc Definition (DefinitionRequest) returns (DefinitionReply) {}

  rpc Create (CreateRequest) returns (CompleteReply) {}

  rpc Update (CreateRequest) returns (CompleteReply) {}

  rpc Remove (DefinitionRequest) returns (CompleteReply) {}

}

message EmptyRequest {}

message Reply {
    string text = 1;
}

message AllReply {
    map<string, string> definitions = 1;
}

message ListReply {
    map<int32, string> concepts = 1;
}

message DefinitionRequest {
    string name = 1;
}

message DefinitionReply {
    string description = 1;
}

message CreateRequest {
    string name = 1;
    string description = 2;
}

message CompleteReply {
    int32 status = 1;
    string message = 2;
}

